--- a/style.css
+++ b/style.css
@@ -1,23 +1,81 @@
 body {background-color: gray;
-
-}
-.header {float: center;
-    text-align: center;
-    width: 90%;
-    padding: 50px;
-    border: 20px solid gray; 
-    background: lightgray;
-    font-size: 35px;
-
+     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+     color: '#777';
+     background: '#777';
+     width: '960px';
+     font-size: '18px';
 }
 
-.nav {float: center;
+.nav,
+.footer,
+.header {
     text-align: center;
-    width: 90%;
-    padding: 50px;
-    border: 20px solid gray;
-    background: lightgray;
-    font-size: 35px;
-    
+    width: 100%;
+    height: 75px;
+    margin: 10px 50px 0px 0px; 
+    padding: 37px 0px 0px 0px;
+    background-color:#ebebeb; 
+    color: #777;     
+}
+
+.nav {text-align: center;
+    width: 100%;
+    height: 75px;
+    padding: 37px 0px 0px 0px;
+    margin: 10px 50px 0px 0px; 
+    background-color: #ebebeb;
 }   
 
+#center {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        align-items: flex-start;
+}
+
+.section {
+    text-align: center;
+    width: 65%;
+    height: 225px;
+    margin: 20px 20px 20px 0px;
+    padding: 50px 0px 0px 0px;
+    background-color: #ebebeb;
+    color: #777;
+    
+}
+
+.article {
+    color: white;
+    margin: 20px 50px;
+    text-align: center;
+    background-color: #777;
+    width: 90%;
+    height: 150px;
+
+}
+
+.h {
+    color: #777;
+    background-color: #ebebeb;
+    width: 90%;
+}
+
+.p,
+.h {
+    color: #777;
+    background-color: #ebebeb;
+    width: 90%;
+    height: 30%;
+    margin: 10px 50px;
+
+}
+
+.aside {
+    text-align: center;
+    width: 35%;
+    height: 225px;
+    margin: 20px 0px 20px 0px;
+    padding: 50px 0px 0px 0px;
+    background-color: #ebebeb;
+    color: #777;
+}
