made changes to width of body and inner sections to reflect homework requirements

--- a/style.css
+++ b/style.css
@@ -1,81 +1,79 @@
 body {background-color: gray;
-     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-     color: '#777';
-     background: '#777';
-     width: '960px';
-     font-size: '18px';
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: '#777';
+    background: '#777';
 }
 
 .nav,
-.footer,
 .header {
-    text-align: center;
-    width: 100%;
-    height: 75px;
-    margin: 10px 50px 0px 0px; 
-    padding: 37px 0px 0px 0px;
-    background-color:#ebebeb; 
-    color: #777;     
-}
-
-.nav {text-align: center;
-    width: 100%;
-    height: 75px;
-    padding: 37px 0px 0px 0px;
-    margin: 10px 50px 0px 0px; 
-    background-color: #ebebeb;
+   text-align: center;
+   width: 960px;
+   height: 75px;
+   margin: 10px 50px 0px 0px; 
+   padding: 37px 0px 0px 0px;
+   background-color:#ebebeb; 
+   color: #777; 
+   font-size: 18px;    
 }   
 
 #center {
-        display: flex;
-        flex-direction: row;
-        justify-content: start;
-        align-items: flex-start;
+       display: flex;
+       flex-direction: row;
+       justify-content: start;
+       align-items: flex-start;
 }
 
 .section {
-    text-align: center;
-    width: 65%;
-    height: 225px;
-    margin: 20px 20px 20px 0px;
-    padding: 50px 0px 0px 0px;
-    background-color: #ebebeb;
-    color: #777;
-    
+   text-align: center;
+   width: 495px;
+   height: 225px;
+   margin: 20px 20px 20px 0px;
+   padding: 50px 0px 0px 0px;
+   background-color: #ebebeb;
+   color: #777;
+   font-size: 18px;
+   
 }
 
 .article {
-    color: white;
-    margin: 20px 50px;
-    text-align: center;
-    background-color: #777;
-    width: 90%;
-    height: 150px;
+   color: white;
+   margin: 20px 10px;
+   text-align: center;
+   background-color: #777;
+   width: 470px;
+   height: 150px;
+   font-size: 18px;
 
-}
-
-.h {
-    color: #777;
-    background-color: #ebebeb;
-    width: 90%;
 }
 
 .p,
 .h {
-    color: #777;
-    background-color: #ebebeb;
-    width: 90%;
-    height: 30%;
-    margin: 10px 50px;
+   color: #777;
+   background-color: #ebebeb;
+   width: 455px;
+   height: 30%;
+   margin: 10px 10px 10px 10px;
+   padding: 5px 0px -4px 0px;
+   font-size: 18px;
 
 }
 
 .aside {
-    text-align: center;
-    width: 35%;
-    height: 225px;
-    margin: 20px 0px 20px 0px;
-    padding: 50px 0px 0px 0px;
-    background-color: #ebebeb;
-    color: #777;
+   text-align: center;
+   width: 445px;
+   height: 225px;
+   margin: 20px 0px 20px 0px;
+   padding: 50px 0px 0px 0px;
+   background-color: #ebebeb;
+   color: #777;
+   font-size: 18px;
+}
+.footer {
+   text-align: center;
+   width: 960px;
+   height: 75px; 
+   padding: 37px 0px 0px 0px;
+   background-color:#ebebeb; 
+   color: #777;
+   font-size: 18px;    
 }
